--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="index.styles.css" rel="stylesheet">
-    
+
     <title>STYLE BLVD</title>
     <style>
         
@@ -21,7 +21,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="assets/logo.png" class="imageLogo" />
+        <img src="./assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
