--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="services.styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Services</title>
+    <title>STYLE BLVD - SERVICES</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -14,7 +14,7 @@
         <div class="navbar-subheading" style="text-decoration: underline;">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="assets/logo.png" class="imageLogo" />
+        <img src="./assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -24,7 +24,7 @@
         <div class="services-heading-container">
             <div class="services-heading">S e r v i c e s</div>
         </div>
-        <img src="assets/services-background.webp" class="services-image"/>
+        <img src="./assets/services-background.webp" class="services-image"/>
     </div>
     
 
