--- a/booking-step2.html
+++ b/booking-step2.html
@@ -24,7 +24,7 @@
         <img src="./assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
-        <div class="navbar-subheading">BOOKING</div>
+        <div class="navbar-subheading" style="text-decoration: underline;">BOOKING</div>
     </div>
 
 
@@ -76,8 +76,8 @@
             </div>
     
             <div class="d-flex justify-content-between mt-4">
-                <button type="button" id="back-btn" class="btn btn-outline-dark px-4 py-2">Back</button>
-                <button type="submit" id="submit-btn" class="btn btn-dark px-4 py-2">Submit</button>
+                <button type="button" id="back-tostp1-btn" class="btn btn-outline-dark px-4 py-2">Back</button>
+                <button type="submit" id="submit-tostp3-btn" class="btn btn-dark px-4 py-2">Submit</button>
             </div>
         </form>
     </div>
