--- a/booking.html
+++ b/booking.html
@@ -24,7 +24,7 @@
         <img src="./assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
-        <div class="navbar-subheading">BOOKING</div>
+        <div class="navbar-subheading" style="text-decoration: underline;">BOOKING</div>
     </div>
 
 
@@ -40,12 +40,17 @@
         <form class="mb-4">
             <div class="row mb-3">
                 <div class="col-md-6">
-                    <label for="service" class="form-label">Services:</label>
+                    <label for="service" class="form-label" style="text-align: left !important;">Services:</label>
                         <select id="service" class="form-select">
                             <option selected>Choose A Service</option>
-                            <option value="Haircut">Haircut</option>
-                            <option value="Shave">Shave</option>
-                            <option value="Coloring">Coloring</option>
+                            <option value="$45 Signature Cut & Style">$45 - Signature Cut & Style</option>
+                            <option value="$20 Luxury Beard Sculpting">$20 - Luxury Beard Sculpting</option>
+                            <option value="$20 Urban Glow Facial">$20 - Urban Glow Facial</option>
+                            <option value="$85 Silk Press & Styling">$85 - Silk Press & Styling</option>
+                            <option value="$120 Loc Maintenance & Styling">$120 - Loc Maintenance & Styling</option>
+                            <option value="$65 Braids & Twists">$65 - Braids & Twists</option>
+                            <option value="$55 Scalp Detox & Treatment">$55 - Scalp Detox & Treatment</option>
+                            <option value="$90 VIP Style Experience">$90 - VIP Style Experience</option>
                         </select>
                     </div>
                     <div class="col-md-6">
@@ -61,7 +66,7 @@
                 </div>
                 <div class="d-flex justify-content-center gap-5 mt-4">
                     <button type="button" id="add-service-btn" class="btn btn-outline-dark px-4 py-2">Add</button>
-                    <button type="button" id="next-btn" style="margin-left: auto;" class="btn btn-dark px-4 py-2">Next</button>
+                    <button type="button" id="next-stp1-btn" style="margin-left: auto;" class="btn btn-dark px-4 py-2">Next</button>
                 </div>
             </form>
 
