--- a/confirmation.html
+++ b/confirmation.html
@@ -33,15 +33,15 @@
         <p class="text-center mb-4">Thank you for choosing STYLE BLVD for your next haircut</p>
     
         <div class="p-4 mx-auto" style="max-width: 600px; border: 2px solid black; background-color: white;">
-            <p><strong>First Name:</strong> <span id="confirm-first"></span></p>
-            <p><strong>Last Name:</strong> <span id="confirm-last"></span></p>
-            <p><strong>Email:</strong> <span id="confirm-email"></span></p>
-            <p><strong>Phone Number:</strong> <span id="confirm-phone"></span></p>
-            <p><strong>Date:</strong> <span id="confirm-date"></span></p>
-            <p><strong>Time:</strong> <span id="confirm-time"></span></p>
-            <p><strong>Stylist:</strong> <span id="confirm-stylist"></span></p>
-            <p><strong>Price:</strong> <span id="confirm-price">$50</span></p>
-            <p><strong>Additional Note:</strong> <span id="confirm-notes"></span></p>
+            <p id="confirm-label"><strong>First Name:</strong> <span id="confirm-first"></span></p>
+            <p id="confirm-label"><strong>Last Name:</strong> <span id="confirm-last"></span></p>
+            <p id="confirm-label"><strong>Email:</strong> <span id="confirm-email"></span></p>
+            <p id="confirm-label"><strong>Phone Number:</strong> <span id="confirm-phone"></span></p>
+            <p id="confirm-label"><strong>Date:</strong> <span id="confirm-date"></span></p>
+            <p id="confirm-label"><strong>Time:</strong> <span id="confirm-time"></span></p>
+            <p id="confirm-label"><strong>Stylist:</strong> <span id="confirm-stylist"></span></p>
+            <p id="confirm-label"><strong>Price:</strong> <span id="confirm-price"></span></p>
+            <p id="confirm-label"><strong>Additional Note:</strong> <span id="confirm-notes"></span></p>
         </div>
     
         <div class="text-center mt-4">
@@ -54,6 +54,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/booking-step4.js "></script>
+    <script src="./javascript/confirmation.js "></script>
 </body>
 </html>
