--- a/html/booking-step3.html
+++ b/html/booking-step3.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="booking.styles.css" rel="stylesheet">
+    <link href="../css/booking.styles.css" rel="stylesheet">
 
     <title>STYLE BLVD - BOOKING</title>
     <style>
@@ -21,7 +21,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading" style="text-decoration: underline;">BOOKING</div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-md-6">
                             <label for="cvv" class="form-label">CVC / CVV*</label>
-                            <input type="text" id="cvv" class="form-control" placeholder="MM/YY" required>
+                            <input type="text" id="cvv" class="form-control" placeholder="###" required>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-dark w-100 my-3">Add Payment</button>
@@ -90,6 +90,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/booking-step3.js "></script>
+    <script src="../javascript/booking-step3.js "></script>
 </body>
 </html>
