--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -7,12 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="booking.styles.css" rel="stylesheet">
+    <link href="../css/booking.styles.css" rel="stylesheet">
 
-    <title>STYLE BLVD - BOOKING</title>
-    <style>
-        
-    </style>
+    <title>STYLE BLVD - CONFIRMATION</title>
 </head>
 
 <body>
@@ -21,7 +18,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -54,6 +51,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/confirmation.js "></script>
+    <script src="../javascript/confirmation.js "></script>
 </body>
 </html>
