--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="about.styles.css" rel="stylesheet">
+    <link href="../css/about.styles.css" rel="stylesheet">
 
     <title>STYLE BLVD ABOUT</title>
     <style>
@@ -21,7 +21,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading" style="text-decoration: underline;">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -31,7 +31,7 @@
         <div class="about-heading-container">
             <div class="about-heading">A B O U T <span style="margin-left: 10px;">U S:</span></div>
         </div>
-        <img src="./assets/about-title.png" class="about-image"/>
+        <img src="../assets/about-title.png" class="about-image"/>
     </div>
 
 
@@ -48,24 +48,24 @@
         </div>
     
         <div class="timeline-container text-center mb-5">
-            <img src="./assets/timeline.png" alt="Our Story Timeline" class="img-fluid">
+            <img src="../assets/timeline.png" alt="Our Story Timeline" class="img-fluid">
         </div>
 
         <div class="about-values text-center mt-5 px-5" style="max-width: calc(100% - 480px); margin: auto;">
             <h3 id="sub-heading" class="fw-bold mb-4">WHAT WE STAND FOR</h3>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <img src="./assets/creativity-icon.png" alt="Creativity Icon" class="mb-3" width="85">
+                    <img src="../assets/creativity-icon.png" alt="Creativity Icon" class="mb-3" width="85">
                     <h5 id="sub-heading" style="padding-top: 1rem;" class="fw-bold">CREATIVITY</h5>
                     <p>Each haircut and style reflects our creativity and your individuality.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="./assets/quality-icon.png" alt="Quality Icon" class="mb-3" width="80">
+                    <img src="../assets/quality-icon.png" alt="Quality Icon" class="mb-3" width="80">
                     <h5 id="sub-heading" class="fw-bold">QUALITY</h5>
                     <p>We use only the best products and techniques to ensure your hair looks great and stays healthy.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="./assets/community-icon.png" alt="Community Icon" class="mb-3" width="80">
+                    <img src="../assets/community-icon.png" alt="Community Icon" class="mb-3" width="80">
                     <h5 id="sub-heading" class="fw-bold">COMMUNITY</h5>
                     <p>STYLE BLVD is more than just a barbershop; it's a place where community and culture come together.</p>
                 </div>
@@ -76,6 +76,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/index.js"></script>
+    <script src="../javascript/index.js"></script>
 </body>
 </html>
