--- a/html/booking.html
+++ b/html/booking.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="booking.styles.css" rel="stylesheet">
+    <link href="../css/booking.styles.css" rel="stylesheet">
 
     <title>STYLE BLVD - BOOKING</title>
     <style>
@@ -21,7 +21,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading" style="text-decoration: underline;">BOOKING</div>
@@ -33,7 +33,7 @@
     <h2 class="text-center fw-bold mb-4" id="sub-heading">Pick A Service</h2>
 
     <div class="text-center mb-5">
-        <img src="./assets/ProgressBar.png" alt="Booking Process" class="img-fluid">
+        <img src="../assets/ProgressBar.png" alt="Booking Process" class="img-fluid">
     </div>
 
     <div class="booking-content text-center">
@@ -76,6 +76,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/booking.js"></script>
+    <script src="../javascript/booking.js"></script>
 </body>
 </html>
