--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="contact.styles.css" rel="stylesheet">
+    <link href="../css/contact.styles.css" rel="stylesheet">
     
     <title>STYLE BLVD - CONTACT</title>
 </head>
@@ -18,7 +18,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading" style="text-decoration: underline;">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -29,7 +29,7 @@
         <p class="mb-4" id="label-text">FEEL FREE TO CONTACT US FOR ANY INQUIRIES, CONCERNS, OR TO LEAVE A REVIEW!</p>
         <div class="contact-card p-4 mx-auto">
             <div class="contact-image mb-3">
-                <img class="contact-img" src="./assets/barber-exterior.jpg" alt="barber shop">
+                <img class="contact-img" src="../assets/barber-exterior.jpg" alt="barber shop">
             </div>
             <hr class="my-3">
             <p class="mb-1">HI@STYLEBLVD.COM</p>
@@ -41,6 +41,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/contact.js"></script>
+    <script src="../javascript/contact.js"></script>
 </body>
 </html>
