--- a/html/index.html
+++ b/html/index.html
@@ -7,12 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="index.styles.css" rel="stylesheet">
+    <link href="../css/index.styles.css" rel="stylesheet">
 
     <title>STYLE BLVD</title>
-    <style>
-        
-    </style>
 </head>
 
 <body>
@@ -21,20 +18,20 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
     </div>
 
     <!-- Main image -->
-    <img src="assets/LandingBackground.png" alt="Main" class="main-image">
+    <img src="../assets/LandingBackground.png" alt="Main" class="main-image">
 
     <!-- Book Now button -->
-    <button class="book-now">Book Now</button>
+    <button id="book-now-butt" class="book-now">Book Now</button>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/index.js"></script>
+    <script src="../javascript/index.js"></script>
 </body>
 </html>
