--- a/html/location.html
+++ b/html/location.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="location.styles.css" rel="stylesheet">
+    <link href="../css/location.styles.css" rel="stylesheet">
 
     <title>STYLE BLVD - LOCATION</title>
 </head>
@@ -14,7 +14,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading" style="text-decoration: underline;">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -24,7 +24,7 @@
         <div class="location-heading-container">
             <div class="location-heading">L O C A T I O N</div>
         </div>
-        <img src="./assets/location-header1.png" class="location-image"/>
+        <img src="../assets/location-header1.png" class="location-image"/>
     </div>
     
 
@@ -33,20 +33,20 @@
 
     <div class="location-body d-flex justify-content-between align-items-center">
         <div class="card" style="width: 20rem; margin: 5vh;">
-            <img src="./assets/barber-exterior.jpg" class="card-img-top" alt="...">
+            <img src="../assets/barber-exterior.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Come drop by STYLE BLVD for the best hair experience you can imagine!</p>
             </div>
         </div>
         <div class="location-text d-flex">
-            <img class="location-pin" src="./assets/location_on.png" alt="location" style="width: 50px; height: 50px;"/>
+            <img class="location-pin" src="../assets/location_on.png" alt="location" style="width: 50px; height: 50px;"/>
             <div>
                 <span class="address-title">ADDRESS:</span><br/>
                 <span class="address-details">200 York Street,<br/>Ottawa, ON<br/>K1N 5T9</span>
             </div>
         </div>
         <div class="location-hours d-flex align-items-center">
-            <img class="location-clock" src="./assets/clock.png" alt="clock" style="width: 65px; height: 65px;"/>
+            <img class="location-clock" src="../assets/clock.png" alt="clock" style="width: 65px; height: 65px;"/>
             <div>
                 <p>MON - FRI: 8AM - 7PM</p>
                 <p>SAT: 10AM - 7PM</p>
@@ -56,6 +56,6 @@
     </div>
      <!-- Bootstrap Bundle with Popper -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="./javascript/index.js"></script>
+     <script src="../javascript/index.js"></script>
 </body>
 </html>
