--- a/html/services.html
+++ b/html/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="services.styles.css">
+    <link rel="stylesheet" href="../css/services.styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>STYLE BLVD - SERVICES</title>
@@ -14,7 +14,7 @@
         <div class="navbar-subheading" style="text-decoration: underline;">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -24,7 +24,7 @@
         <div class="services-heading-container">
             <div class="services-heading">S e r v i c e s</div>
         </div>
-        <img src="./assets/services-background.webp" class="services-image"/>
+        <img src="../assets/services-background.webp" class="services-image"/>
     </div>
     
 
@@ -42,49 +42,49 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/generic-haircut.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/generic-haircut.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Signature Cut & Style - $45</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/lineup.png" class="d-block w-100" alt="...">
+                <img src="../assets/lineup.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Luxury Beard Sculpting - $20 </h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/face-treatment.webp" class="d-block w-100" alt="...">
+                <img src="../assets/face-treatment.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Urban Glow Facial - $20</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/silk-press-image.png" class="d-block w-100" alt="..." style="height: 10%;">
+                <img src="../assets/silk-press-image.png" class="d-block w-100" alt="..." style="height: 10%;">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Silk Press & Styling - $85</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/locs-retwist.jpeg" class="d-block w-100" alt="...">
+                <img src="../assets/locs-retwist.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Loc Maintenance & Styling - $120</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/braids.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/braids.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Braids & Twists - Starting From $65</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/scalp.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/scalp.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Scalp Detox & Treatment - $55 </h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./assets/luxury-cut.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/luxury-cut.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>VIP Style Experience - $90 </h5>
                 </div>
@@ -109,7 +109,7 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/index.js"></script>
-    <script src="./javascript/services.js"></script>
+    <script src="../javascript/index.js"></script>
+    <script src="../javascript/services.js"></script>
 </body>
 </html>
