--- a/html/stylists.html
+++ b/html/stylists.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="stylists.services.css" rel="stylesheet">
+    <link href="../css/stylists.style.css" rel="stylesheet">
     
     <title>STYLE BLVD - STYLISTS</title>
     <style>
@@ -21,7 +21,7 @@
         <div class="navbar-subheading">SERVICES</div>
         <div class="navbar-subheading">ABOUT</div>
         <div class="navbar-subheading">LOCATION</div>
-        <img src="./assets/logo.png" class="imageLogo" />
+        <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading" style="text-decoration: underline;">STYLISTS</div>
         <div class="navbar-subheading">BOOKING</div>
@@ -33,25 +33,25 @@
         <div class="row g-4">
             <div class="col-12 col-md-6">
                 <div class="stylist-card text-center">
-                    <img src="./assets/shai.png" class="img-fluid stylist-img" alt="Shai">
+                    <img src="../assets/shai.png" class="img-fluid stylist-img" alt="Shai">
                     <h5 class="stylist-name">SHAI</h5>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="stylist-card text-center">
-                    <img src="./assets/dua.png" class="img-fluid stylist-img" alt="Dua">
+                    <img src="../assets/dua.png" class="img-fluid stylist-img" alt="Dua">
                     <h5 class="stylist-name">DUA</h5>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="stylist-card text-center">
-                    <img src="./assets/benito.png" class="img-fluid stylist-img" alt="Benito">
+                    <img src="../assets/benito.png" class="img-fluid stylist-img" alt="Benito">
                     <h5 class="stylist-name">BENITO</h5>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="stylist-card text-center">
-                    <img src="./assets/bron.png" class="img-fluid stylist-img" alt="Bron">
+                    <img src="../assets/bron.png" class="img-fluid stylist-img" alt="Bron">
                     <h5 class="stylist-name">BRON</h5>
                 </div>
             </div>
@@ -71,7 +71,7 @@
    
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascript/index.js"></script>
-    <script src="./javascript/stylists.js"></script>
+    <script src="../javascript/index.js"></script>
+    <script src="../javascript/stylists.js"></script>
 </body>
 </html>
