tweaks for cleanup

--- a/html/booking-step3.html
+++ b/html/booking-step3.html
@@ -29,6 +29,9 @@
 
 
     <div class="booking-container py-5" style="margin: 0 15vh;">
+        <div class="text-center mb-5">
+            <img src="../assets/ProgressBar3.png" alt="Booking Process" class="img-fluid">
+        </div>
         <h2 class="text-center fw-bold mb-4" id="sub-heading">Payment Method</h2>
     
         <div class="row">
