--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -26,6 +26,10 @@
 
 
     <div class="booking-container py-5" style="margin: 0 15vh;">
+        <div class="text-center mb-5">
+            <img src="../assets/ProgressBar4.png" alt="Booking Process" class="img-fluid">
+        </div>
+
         <h2 class="text-center fw-bold mb-3" id="sub-heading">Appointment Booked</h2>
         <p class="text-center mb-4">Thank you for choosing STYLE BLVD for your next haircut</p>
     
