--- a/html/stylists.html
+++ b/html/stylists.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <div class="stylist-card text-center">
-                    <img src="../assets/DUA.png" class="img-fluid stylist-img" alt="Dua">
+                    <img src="../assets/dualipa.png" class="img-fluid stylist-img" alt="Dua">
                     <h5 class="stylist-name">DUA</h5>
                 </div>
             </div>
