--- a/html/about.html
+++ b/html/about.html
@@ -48,7 +48,7 @@
         </div>
     
         <div class="timeline-container text-center mb-5">
-            <img src="../assets/lineoftime.png" alt="Our Story Timeline" class="img-fluid">
+            <img src="../assets/barbershopLine.png" alt="Our Story Timeline" class="img-fluid">
         </div>
 
         <div class="about-values text-center mt-5 px-5" style="max-width: calc(100% - 480px); margin: auto;">
