--- a/html/location.html
+++ b/html/location.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="location-hours d-flex align-items-center">
-            <img class="location-clock" src="../assets/clock.png" alt="clock" style="width: 65px; height: 65px;"/>
+            <img class="location-clock" src="../assets/Clock.png" alt="clock" style="width: 65px; height: 65px;"/>
             <div>
                 <p>MON - FRI: 8AM - 7PM</p>
                 <p>SAT: 10AM - 7PM</p>
