--- a/html/booking-step2.html
+++ b/html/booking-step2.html
@@ -30,7 +30,7 @@
 
     <div class="booking-container py-5" style="margin: 0 15vh;">
         <div class="text-center mb-5">
-            <img src="../assets/ProgressBar2.png" alt="Booking Process" class="img-fluid">
+            <img src="../assets/pbar2.png" alt="Booking Process" class="img-fluid">
         </div>
 
         <h2 class="text-center fw-bold mb-4" id="sub-heading">Book An Appointment</h2>
