underline for nav

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -21,7 +21,7 @@
         <img src="../assets/logo.png" class="imageLogo" />
         <div class="navbar-subheading">CONTACT</div>
         <div class="navbar-subheading">STYLISTS</div>
-        <div class="navbar-subheading">BOOKING</div>
+        <div class="navbar-subheading" style="text-decoration: underline;">BOOKING</div>
     </div>
 
 
